--- a/Index.html
+++ b/Index.html
@@ -10,17 +10,13 @@
     
 </head>
 <body id="">
- <div class="rectangle"></div>
- <h1 class="tel"> <a href="https://mega.nz/folder/OU93yZ6I#OyEAZscpe0j4xGtXZ_DF1A"> Télécharger</a></h1>
- <img class="portalscreen"src="./assets/Minecraft 1.12.2 11_06_2022 20_47_17.png" alt="">
- <div class="rectangle2"></div>
- <img class="chocolebest"src="./assets/Portal-logo_MINECRAFT.png" alt="">
- <div class="rectangle3"></div>
- <img class="valve" src="./assets/Valve_logo.svg.png" alt="">
- <img class="mojang" src="./assets/1200px-Mojang_Studios_Logo_SVG.svg.png" alt="">
- <h1 class="credit">Crédits :</h1>
- <img class="portalgun"src="./assets/portal.png" alt="">
- <h2 class="def">Portal Minecraft : ModPack et Map aventure dans le thème de Portal de Valve en 2007 , crée un portail pour vous téléporter, utiliser des gels pour courir plus vite ! Visitez une map repris de portal mis dans Minecraft ! Écouter la radio voyager jusqu’au Narrateur et désactiver le !
-</h2>
+    <img class="background" src="./assets/Test_chamber_00.png" alt="">
+    <h1 class="portaltitle">Portal</h1>
+    <h1 class="Mctitle">MC</h1>
+
+    <h2 class="newmap">Nouvelle partie</h2>
+    <h2 class="bonusmap">Carte bonus</h2>
+    <h2 class="credit">Crédits</h2>
+    <h2 class="info">Informations</h2>
     </body>
 </html>
